# gest

./: Cargo.toml  LICENSE  README.md  gest.yaml
example/: browser.yaml  config.yaml  jetbrains.yaml  kitty.yaml  playerctl.yaml  tabs.yaml
examples/: config.yaml  jetbrains.yaml  playerctl.yaml  vim.yaml
src/: args.rs  config.rs  gestures.rs  input.rs  main.rs  sequence_step.rs  window_monitor.rs
